--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<ul>
-    <li><a routerLink="/">User</a></li>
-    <li><a routerLink="/about">About</a></li>
-</ul>
+<app-top-nav></app-top-nav>
 <router-outlet></router-outlet>
