--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<h4>A4App version 1.0</h4>
+<div class="myContainer">
+  <h4>This app uses : </h4>
+  <h4>Angular 4</h4>
+  <h4>Bootstrap 4</h4>
+</div>
+
