Add progress bar

--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -15,6 +15,9 @@
         <a class="nav-link" href="#" routerLink="/profile">Profile</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/progress">Progress Bar</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#" routerLink="/about">About</a>
       </li>
     </ul>
