Updated Project Stage

--- a/src/app/components/progress-bar/progress-bar.component.css
+++ b/src/app/components/progress-bar/progress-bar.component.css
@@ -37,3 +37,10 @@
   font-size: x-large;
   font-weight: 200;
 }
+
+.progress-bar {
+  height: 40px;
+  line-height: 50px;
+  text-align: center;
+  font-size: x-large;
+}
