--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -5,31 +5,59 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav"></div>
 </nav>
+
 <br>
+
+
 <div class="progress" style="margin: 20px;">
   <div class="progress-bar" role="progressbar" aria-valuenow="70"
        aria-valuemin="0" aria-valuemax="100" style="height: 50px;" [ngStyle]="{'width': wrong +'%'}">
-    <span class="sr-only">70% Complete</span>
+    <span>{{wrong}}% Completed</span>
   </div>
-  <div class="bar-step" style="left: 75%">
-    <div class="label-txt">Sprint 4</div>
-    <div class="label-percent">75%</div>
-    <div class="label-line"></div>
-
-  </div>
-  <div class="bar-step" style="left: 10%">
-    <div class="label-txt">Initiate Project</div>
-    <div class="label-percent">10%</div>
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 55%">
-    <div class="label-txt">Sprint 3</div>
-    <div class="label-percent">55%</div>
-    <div class="label-line"></div>
+  <div *ngFor="let i of testConfig">
+    <div class="bar-step" [ngStyle]="{'left': i.percentage +'%'}">
+      <div class="label-txt">{{i.label}}</div>
+      <div class="label-percent">{{i.percentage}}%</div>
+      <div class="label-line"></div>
+    </div>
   </div>
 </div>
 <div align="center" class="stage">Stage: {{stage}}</div>
 <div align="center" class="step">Step: {{step}}</div>
-<div align="center">
-  <button class="btn btn-primary" (click)="addProgress()" style="margin: 20px;">Add Progress</button>
+<div style="width: 500px; margin-left: 40px;">
+  <label>Progress</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon9">Current Progress</span>
+    <input type="number" class="form-control" aria-describedby="basic-addon9" [(ngModel)]="wrong">
+  </div>
+  <br>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon1">Label</span>
+    <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="testConfig[0].label">
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon2">Percentage</span>
+    <input type="number" class="form-control" aria-describedby="basic-addon2" [(ngModel)]="testConfig[0].percentage">
+  </div>
+  <br>
+  <label>Element 2</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon3">Label</span>
+    <input type="text" class="form-control" aria-describedby="basic-addon3" [(ngModel)]="testConfig[1].label">
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon4">Percentage</span>
+    <input type="number" class="form-control" aria-describedby="basic-addon4" [(ngModel)]="testConfig[1].percentage">
+  </div>
+  <br>
+  <label>Element 3</label>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon5">Label</span>
+    <input type="text" class="form-control" aria-describedby="basic-addon5" [(ngModel)]="testConfig[2].label">
+  </div>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon6">Percentage</span>
+    <input type="number" class="form-control" aria-describedby="basic-addon6" [(ngModel)]="testConfig[2].percentage">
+  </div>
 </div>
+
