--- a/src/app/components/top-nav/top-nav.component.html
+++ b/src/app/components/top-nav/top-nav.component.html
@@ -24,6 +24,9 @@
         <a class="nav-link" href="#" routerLink="/slider">Slider</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/multiScroll">Multi Scroller</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#" routerLink="/about">About</a>
       </li>
     </ul>
