--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -31,6 +31,7 @@
     <input type="number" class="form-control" aria-describedby="basic-addon9" [(ngModel)]="wrong">
   </div>
   <br>
+  <label>Element 1</label>
   <div class="input-group">
     <span class="input-group-addon" id="basic-addon1">Label</span>
     <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="testConfig[0].label">
