--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -75,13 +75,22 @@
   </div>
 </div>
 <br>
-<div id="makeMargin">
+<div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 15%; background-color: #c4ffd8" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">1</div>
-    <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #5fd386" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">2</div>
-    <div class="progress-bar" role="progressbar" style="width: 20%; background-color: #359956" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">3</div>
-    <div class="progress-bar" role="progressbar" style="width: 10%; background-color: #1a5e30" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">4</div>
+    <div class="progress-bar" role="progressbar" style="width: 15%; background-color: #c4ffd8" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">1</div>
+    <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #5fd386" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">2</div>
+    <div class="progress-bar" role="progressbar" style="width: 20%; background-color: #359956" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">3</div>
+    <div class="progress-bar" role="progressbar" style="width: 10%; background-color: #1a5e30" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">4</div>
   </div>
   <br>
   <h4 id="kickOffText">Kick Off Date: <span id="dateText">{{date | date}}</span></h4>
+</div>
+<div *ngFor="let i of testConfig">
+  <div class="progress-bar" role="progressbar" [ngStyle]="{'width': i.percentage + '%'}" style="background-color: #5fd386" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>
+</div>
+<br>
+<div class="progress">
+    <span *ngFor="let i of testConfig">
+      <div class="progress-bar" *ngIf="createCell(i)" role="progressbar" [ngStyle]="drawCell(i)" style="background-color: #5fd386" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>
+    </span>
 </div>
