--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -91,6 +91,6 @@
 <br>
 <div class="progress">
     <span *ngFor="let i of testConfig">
-      <div class="progress-bar" *ngIf="createCell(i)" role="progressbar" [ngStyle]="drawCell(i)" style="background-color: #5fd386" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>
+      <div class="progress-bar" role="progressbar" [ngStyle]="drawCell(i)" style="background-color: #5fd386" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>
     </span>
 </div>
