--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -9,6 +9,7 @@
 
 <!--TODO Not dynamic-->
 <h3 class="issue">Issue: Not dynamic</h3>
+<br>
 <div class="progress" style="margin-left: 0px; height: 0px">
   <div class="progress-bar" role="progressbar" aria-valuenow="70"
        aria-valuemin="0" aria-valuemax="100" style="height: 50px;" [ngStyle]="{'width': wrong +'%'}">
@@ -85,35 +86,29 @@
     <div class="progress-bar" role="progressbar" style="width: 10%; background-color: #1a5e30" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">4</div>
   </div>
   <br>
-  <h4 id="kickOffText">Kick Off Date: <span id="dateText">{{date | date}}</span></h4>
+  <h4 class="kickOffText">Kick Off Date: <span class="dateText">{{date | date}}</span></h4>
 </div>
 <br><hr>
 
-<!--TODO Not all one line-->
-<h3 class="issue">Issue: Not one line</h3>
-<div *ngFor="let i of testConfig">
-  <div class="progress-bar" role="progressbar" [ngStyle]="{'width': i.percentage + '%'}" style="background-color: #5fd386" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>
-</div>
-<br><hr>
-
-<!--&lt;!&ndash;TODO Each cell is acting like its own bar&ndash;&gt;-->
-<!--<h3 class="issue">Issue: Each cell is acting like its own bar</h3>-->
-<!--<div class="progress">-->
-    <!--<span *ngFor="let i of testConfig">-->
-      <!--<div class="progress-bar" role="progressbar" [ngStyle]="drawCell(i)" style="background-color: #5fd386" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>-->
-    <!--</span>-->
-<!--</div>-->
-<!--<br><hr>-->
-
-<!--<h3 class="issue">Staging Area</h3>-->
-<!--<div class="progress" *ngFor="let i of testConfig">-->
-    <!--<div class="progress-bar" role="progressbar" [ngStyle]="drawCell(i)" style="background-color: #5fd386" aria-valuemin="0" aria-valuemax="100">{{i.name}}</div>-->
-<!--</div>-->
-<!--<br>-->
-
-<table class="container-fluid timeLine">
+<table class="container-fluid">
   <tr>
-    <td *ngFor="let i of testConfig" [ngStyle]="drawCell(i)" class="aBlock">{{i.name}}</td>
+    <td style="width: '${timeLineWidths[0]}'">{{earliestYear}}</td>
+    <td style="width: 25%">|</td>
+    <td style="width: '${timeLineWidths[2]}'">2017</td>
+    <td style="width: '${timeLineWidths[3]}'">|</td>
+    <td style="width: '${timeLineWidths[4]}'; float: right">{{latestYear}}</td>
   </tr>
 </table>
+<table class="container-fluid timeLine">
+  <tr>
+    <td *ngFor="let i of testConfig" [ngStyle]="drawCell(i)" class="aBlock"><span style="color: white !important;" class="blockText">{{i.name}}</span> </td>
+  </tr>
+</table>
+<br>
+<h4 class="kickOffText">Kick Off Date: <span class="dateText">{{date | date}}</span></h4>
+<!--<br>-->
+<!--<div class="form-group">-->
+  <!--<label for="usr">Array of Event Objects:</label>-->
+  <!--<textarea type="text" class="form-control" id="usr" [ngModel]="jsonObjectString"></textarea>-->
+<!--</div>-->
 
