--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -80,7 +80,8 @@
 <br>
 <div>
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 15%; background-color: #c4ffd8" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">1</div>
+    <div class="progress-bar" role="progressbar" [ngStyle]="{'width': testPercentage+'%'}">1</div>
+    <!--<div class="progress-bar" role="progressbar" style="width: 25%; background-color: #c4ffd8" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">1</div>-->
     <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #5fd386" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">2</div>
     <div class="progress-bar" role="progressbar" style="width: 20%; background-color: #359956" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">3</div>
     <div class="progress-bar" role="progressbar" style="width: 10%; background-color: #1a5e30" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">4</div>
