--- a/src/app/components/timeline/timeline.component.css
+++ b/src/app/components/timeline/timeline.component.css
@@ -17,16 +17,18 @@
 }
 
 .label-line {
-  float: right;
-  background: pink;
+  float: top;
+  background: black;
   height:30px;
   width:2px;
   margin-left: 5px;
+  line-height: 80px;
 }
 
 .label-percent {
   float: right;
-  margin-left: -10px;
+  line-height: 40px;
+  font-size: medium;
 }
 
 .progress-bar {
@@ -68,4 +70,12 @@
 
 .aBlock {
   color: blue;
+}
+
+.testBlock {
+  background-color: blue;
+  color: white;
+  border-style: solid;
+  border-width: 3px;
+  border-color: red;
 }
