--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -7,91 +7,7 @@
 </nav>
 <br>
 
-<!--TODO Not dynamic-->
-<h3 class="issue">Issue: Not dynamic</h3>
-<br>
-<div class="progress" style="margin-left: 0px; height: 0px">
-  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-       aria-valuemin="0" aria-valuemax="100" style="height: 50px;" [ngStyle]="{'width': wrong +'%'}">
-    <span class="sr-only">70% Complete</span>
-  </div>
-  <div class="bar-step" style="left: 0.5%">
-    <div class="label-percent"></div>
-  </div>
-  <div class="bar-step" style="left: 12.5%">
-    <div class="label-percent">2013</div>
-  </div>
-  <div class="bar-step" style="left: 25%">
-    <div class="label-percent"></div>
-  </div>
-  <div class="bar-step" style="left: 37.5%">
-    <div class="label-percent">2014</div>
-  </div>
-  <div class="bar-step" style="left: 50%">
-    <div class="label-percent"></div>
-  </div>
-  <div class="bar-step" style="left: 62.5%">
-    <div class="label-percent">2015</div>
-  </div>
-  <div class="bar-step" style="left: 75%">
-    <div class="label-percent"></div>
-  </div>
-  <div class="bar-step" style="left: 87.5%">
-    <div class="label-percent">2016</div>
-  </div>
-  <div class="bar-step" style="left: 97%">
-    <div class="label-percent"></div>
-  </div>
-</div>
-<br>
-<div class="progress" style="margin: 0px; height: 0px">
-  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-       aria-valuemin="0" aria-valuemax="100" style="height: 50px;" [ngStyle]="{'width': wrong +'%'}">
-    <span class="sr-only">70% Complete</span>
-  </div>
-  <div class="bar-step" style="left: 0.5%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 12.5%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 25%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 37.5%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 50%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 62.5%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 75%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 87.5%">
-    <div class="label-line"></div>
-  </div>
-  <div class="bar-step" style="left: 99%">
-    <div class="label-line"></div>
-  </div>
-</div>
-<br>
-<div>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" [ngStyle]="{'width': testPercentage+'%'}">1</div>
-    <!--<div class="progress-bar" role="progressbar" style="width: 25%; background-color: #c4ffd8" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">1</div>-->
-    <div class="progress-bar" role="progressbar" style="width: 30%; background-color: #5fd386" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">2</div>
-    <div class="progress-bar" role="progressbar" style="width: 20%; background-color: #359956" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">3</div>
-    <div class="progress-bar" role="progressbar" style="width: 10%; background-color: #1a5e30" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">4</div>
-  </div>
-  <br>
-  <h4 class="kickOffText">Kick Off Date: <span class="dateText">{{date | date}}</span></h4>
-</div>
-<br><hr>
-
-<table class="container-fluid">
+<table class="container-fluid">   
   <tr class="timeLineRow">
     <td style="width: 20%">{{earliestYear}}</td>
     <td style="width: 20%">|</td>
@@ -102,7 +18,7 @@
 </table>
 <table class="container-fluid timeLine">
   <tr>
-    <td *ngFor="let i of testConfig" [ngStyle]="drawCell(i)" class="aBlock"><span style="color: white !important;" class="blockText">{{i.name}}</span> </td>
+    <td *ngFor="let i of testConfig" [ngStyle]="drawCell(i)" class="aBlock">{{i.name}}</td>
   </tr>
 </table>
 <br>
