--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -14,13 +14,13 @@
   </ol>
   <div class="carousel-inner" role="listbox" align="center">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pug-dog-breed-pictures/3-sidesitting.jpg" alt="First slide">
+      <a href="http://www.google.com"><img class="d-block img-fluid" src='{{imagesArray.slide1}}' alt="First slide"></a>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="http://media.gettyimages.com/photos/surprised-cat-picture-id561460035" alt="Second slide">
+        <a href="http://www.google.com"><img class="d-block img-fluid" src='{{imagesArray.slide2}}' alt="Second slide"></a>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="http://dogsaholic.com/wp-content/uploads/2015/04/Dumb-face.jpg" alt="Third slide">
+        <a href="http://www.google.com"><img class="d-block img-fluid" src='{{imagesArray.slide3}}' alt="Third slide"></a>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
