--- a/src/app/components/multi-scroll/multi-scroll.component.html
+++ b/src/app/components/multi-scroll/multi-scroll.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav"></div>
 </nav>
 
-<div id="carouselExampleIndicators" #carouselExampleIndicators class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" #carouselExampleIndicators class="carousel slide" data-ride="carousel" align="center">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -14,13 +14,9 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="http://cdn3-www.dogtime.com/assets/uploads/gallery/pug-dog-breed-pictures/3-sidesitting.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="http://media.gettyimages.com/photos/surprised-cat-picture-id561460035" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="http://dogsaholic.com/wp-content/uploads/2015/04/Dumb-face.jpg" alt="Third slide">
+      <div class="row" style="margin-left: 38%">
+        <img *ngFor="let i of slidesArray" class="d-block img-fluid" src='{{i.image}}' alt="First slide">
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,3 +28,5 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div id="parallelogram"></div>
+<div id="parallelogram"></div>
