--- a/src/app/components/progress-bar/progress-bar.component.css
+++ b/src/app/components/progress-bar/progress-bar.component.css
@@ -44,3 +44,12 @@
   text-align: center;
   font-size: x-large;
 }
+
+@media (max-width: 1500px){
+  .label-txt {
+    display: none;
+  }
+  .label-percent {
+    display: none;
+  }
+}
